add ut case (#27)